tier5.css
/*GET COLORING UNDER THE HEADER AND HEADER*/
#header{
  z-index: 2;
}

#projectTitleBox{
  height:auto;
  left: 0;
  right: 0;
  z-index: -2;
  margin-top: -10%;
  width: 100%;
  height:450px;
  text-align: center;
}

.projectTitleSize{
  text-align: center;
  font-size: 30px;
}

#projectTitle{
  color: white;
  /*color: rgb(236,233,226);*/
}

.titleBackground{
  background-color: rgb(01,161,167);
  }

.projectLogo{
  width:250px;
  padding-top:15%;
  }

  /*HOVER HULA*/

  /*.containerOcto{
    width: 250px;
    text-align: center;
    display:inline-block;
    padding-top:1%;
  }*/

.image-swap img:last-child{display:none}
.image-swap:hover img:first-child{display:none}
.image-swap:hover img:last-child{display:inline-block}

/*INTRODUCTION*/
.introBoxes{
  text-align: center;
  margin-top: 2%;
}

.introBox{
  display:inline-block;
  width:320px;
  height:320px;
  float:none;
  vertical-align: top;
}

.boxTitle{
  color: white;
  text-align: left;
  font-size: 24px;
  color: rgb(221, 98, 92);
}

.boxText{
color: rgb(93,104,106);
text-align: left;
}

/*OUR PROCESS*/
.ourProcessTitle{
  font-size: 30px;
  text-align: center;
  margin-top:2%;
  margin-bottom: 2%;
}

.processCircleDiv{
text-align: center;
}

.processCircle{
width:125px;
height:125px;
border-radius:50%;
background: rgb(01,161,167);
color: white;
position:relative;
}

.process{
display:inline-block;
}

.arrow{
  width:75px;
  padding-bottom: 100px;
}

.circleText{
  position:absolute;
  width:100%;
}

.twoLine{
  padding-top: 30px;
}

.oneLine{
  padding-top: 40px;
}

/*STRATEGY SECTION: approach*/
.ourApproachTitle{
font-size: 30px;
text-align: center;
font-weight: bold;
}

.approach{
  text-align: center;
  margin:5%;
}

.approachSections{
  margin:2%;
}

.approachCircle{
  width:50px;
  height:50px;
  border-radius:50%;
  background-color: rgb(221,98,92);
  color:white;
  position:relative;
  vertical-align: top;
  display: inline-block;
  font-size:26px;
  padding-top:7px;
}


.approachPoints{
font-size: 24px;
font-weight: bold;
}

.approachText{
text-align: left;
width:650px;
display: inline-block;
}

@media (max-width:827px) {
  .approachText{
    width:90%;
  }
}

/*STRATEGY:FUNNEL SECTION*/

.funnelLogos{
  text-align: center;
  padding-top: 2%;
}



.competitorLogos{
  width:250px;
  display: inline-block;
}

.cContact, .lNexus{
    width:300px;
}


.logoRow{
  padding-bottom:1%;
}

.funnel{
  text-align: center;
  width: 300px;
}
/*STRATEGY:Competitor Table*/

.tableParent{
  text-align: center;
}

.compTable{
  width:80%;
  margin:auto;
  text-align: left;
}

@media screen (max-width: 767px) {
  .compTable{
    width:100%;
    text-align: left;
  }
}

/*@media screen (max-width: 931px) {
  .tableParent{
    text-align: left;
  }
}*/

.compTableTitle{
  font-size: 40px;
  text-align: center;
  color:rgb(01, 161, 167);
  background:rgb(234,231,231);
  margin-bottom: 4%;
  margin-top: 4%;
  padding-top: 2%;
  padding-bottom: 2%;
}
.compTableBar{
  background-color: rgb(01, 161, 167);
  color:white;
  text-align: center;
}
.compTableText{
  vertical-align: top;
  color:rgb(74, 74, 74);
}

th{
  text-align: center;
}

.leftSideTitles{
background-color: rgb(01, 161, 167);
color:white;
padding-left: 1%;
padding-right:1%;
}

.weakLine{
  border-top:solid 1px rgb(74, 74, 74);
}
.weakColor{
background-color:rgb(246, 243, 246);
}

.weakLineTop{
  border-top:solid 1px white;
}

td{
width:150px;
font-size: 16px;
}

.competitorTableLogos{
  width:110px;
  vertical-align: bottom;
}
.zoomTableLogo{
  width:75px;
}

.tierTableLogo{
  width:90px;
}

.insideTableLogo {
width:75px;
}

.cost{
  list-style-type: none;
}
.table-borderless tbody tr td, .table-borderless tbody tr th, .table-borderless thead tr th {
    border-top: none;
}

.features{
  text-align: center;
}

.featureCompImg{
  width:70%;
}
tbody{
  border-color: 1px solid white;
}

/*THE RECOMMENDATION CIRCLES*/

.circleRecWrapper{
  text-align: center;
}

.recCircle{
width:225px;
height:225px;
border-radius:50%;
border: solid 3px rgb(221,98,92);
color: rgb(74, 84, 74);
display:inline-block;
margin-left: 2%;
position:relative;
}

.circleRecText{
  font-size: 18px;
  position:absolute;
  width:100%;
  padding-top:25%;
  padding-left:5%;
  padding-right:5%;
}
/*PIE SECTION*/
.pieIntro{
  text-align: center;
  margin-top:3%;
  /*margin-bottom: 3%;*/
}

.pieIntroSec{
  font-size: 20px;
  display: inline-block;
  text-align:center;
}
.pies{
  vertical-align:top;
}
.pieItem{
  width:200px;
  text-align: center;
  margin-bottom: 3%;
}

.pieItem25{
  width:100px;
  padding-top: 10%;
}

.pieIntroSubTitle{
  font-weight: bold;
  font-size: 18px;
}
.pieText{
  font-size: 16px;
}

.operators{
padding-top: 175px;
}



.pieSign{
  width:50px;
}

  min-height: 100%;


/*INTERVIEW & SURVERY SECTION*/

.surveyAndInterview{
  margin-bottom: 3%;
}
.researchPeepsContainer{
  text-align: center;
}

.peepsStats{
  text-align: left;
  vertical-align: top;
  font-size: 20px;
}
.researchInline{
    display:inline-block;
}

.researchNumbers{
  font-size: 20px;
}

.peeps{
  width:75px;
  vertical-align: bottom;
  /*margin-top:1%;*/
  margin-right: 2%;
  margin-bottom: 2%;
}
.topPeep{
  padding-bottom: 3%;
}

.width{
  width: 200px;
}
 .researchDes{
   width: 450px;
   text-align: left;
   vertical-align: top;
 }

/*CIRCLES AND TRIANGLES*/
.titleP{
font-size: 20px;
font-weight: bold;
text-align: center;
}

.researchCirTri{
  text-align: center;
  margin 0 auto;
}

.researchCircles {
  display:inline-block;
  /*width: 550px;*/
  vertical-align: top;
}
/*set width???*/
.circles3{
  width:400px;
}

.researchCircles{
    margin-bottom: 3%;
    display:inline-block;
}

/*TRIAGLES*/
.researchTriangles{
  display:inline-block;
  text-align: center;
  margin-top:0.5%;
}

.triangleText{
  text-align: left;
  width:400px;
  font-size: 20px;
  font-weight: bold;
}

.triangleTextImg{
  width:400px;
}
.triangleSectionDivs{
  text-align: center;
}

/*BRAIN */
.brainBackground{
  text-align: center;
}
/* ... */

